--- a/BlazorMovie/wwwroot/index.html
+++ b/BlazorMovie/wwwroot/index.html
@@ -7,14 +7,21 @@
     <title>Movie Pro Wonder</title>
     <base href="/" />
     <!--BOOTSTRAP 5.3 and Icons-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" 
-    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <!--END BOOTSTRAP 5.3 and Icons-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
+    <!--FAVICONS-->
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">
+    <link rel="shortcut icon" href="/favicon.ico">
+    <link rel="manifest" href="/site.webmanifest">
     <!--Adobe Fonts-->
     <link rel="stylesheet" href="https://use.typekit.net/jbp2yzl.css">
     <!--END Adobe Fonts-->
+
     <!--Blazor CSS-->
     <link rel="stylesheet" href="css/app.css" />
     <link href="BlazorMovie.styles.css" rel="stylesheet" />
